methods.returning.MethodsReturning.scala.code
var sawBaggle :Boolean
var seebBaggle : Boolean
seebBaggle = false
def haveBaggle():Boolean ={
    for (stepper <-1 to 6){
      forward()
      if (isOverBaggle()){
        return sawBaggle = true
      }else{
        forward()
      }
      for (stepper1 <- 1 to 6){
          backward()
      }
      if (sawBaggle){
        return seenBaggle = true 
      }
    }
}